// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IDCardNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="id_card_number"
      >
        Numer dowodu osobistego
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Numer dowodu osobistego"
          name="id_card_number"
          placeholder="Numer dowodu osobistego"
          value="48801213439233148617383842"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podany numer dowodu jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<IDCardNumberField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  label="Numer dowodu osobistego"
  name="id_card_number"
  placeholder="Numer dowodu osobistego"
  value=""
/>
`;

exports[`<IDCardNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="id_card_number"
      >
        IDcard*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="IDcard"
          name="id_card_number"
          placeholder="Numer dowodu osobistego*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<IDCardNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="id_card_number"
      >
        IDCard
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="IDCard"
          name="id_card_number"
          placeholder="Numer dowodu osobistego"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
